Adjusing style for printed pages rather than screen reading

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -4,10 +4,10 @@
 @page {
     size: portrait;
 
-    margin-left: 2.54cm;
-    margin-right: 2.54cm;
-    margin-top: 2.54cm;
-    margin-bottom: 3.76cm;
+    margin-left: 1.27cm;
+    margin-right: 1.27cm;
+    margin-top: 1.27cm;
+    margin-bottom: 2.54cm;
 }
 
 /* Tips, caveats, etc */
@@ -30,6 +30,10 @@ img {
 /* Print links */
 p a::after {
     content: " (" attr(href) ") ";
+}
+
+body {
+    font-size: 11pt;
 }
 
 }
